# enl

./: .dockerignore  .ignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  Taskfile.yml  docker-compose.yml
docs/superpowers/plans/: 2026-07-13-bind-retry.md  2026-07-13-multicast-transport.md  2026-07-13-refactor-cleanups.md  2026-07-16-listen-multicast-bind.md  2026-07-16-set-nowait.md
docs/superpowers/specs/: 2026-07-12-multicast-transport-design.md  2026-07-16-set-nowait-design.md
src/: codec.rs  commands.rs  error.rs  main.rs  net.rs  properties.rs  schema.rs
