[package]
name = "enl"
version = "1.0.0"
edition = "2021"
description = "ECHONET Lite 専用 CLI。AIネイティブ・ステートレス・one-shot。"
license = "MIT"

[[bin]]
name = "enl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
